--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Ejercicio nro 3 con Box Model</title>
+   <title>Ejercicio con git</title>
 
 
 
@@ -142,7 +142,7 @@
 
 
    <footer>
-      <h4>Derechos reservados 2025</h4>
+      <h4>Derechos reservados 2025 - Ivan Bura</h4>
    </footer>
 
 </body>
